--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: ruby
-rvm:
-  - 2.0.0
-  - 2.1.2
-  - 2.1.5
-  - 2.2.0
-gemfile:
-  - gemfiles/3.2.gemfile
-  - gemfiles/4.0.gemfile
-  - gemfiles/4.1.gemfile
-  - gemfiles/4.2.gemfile
+matrix:
+  include:
+    - rvm: 1.9.3
+      env: "RAILS_VERSION=3.2.0"
+    - rvm: 2.0.0
+      env: "RAILS_VERSION=4.0.0"
+    - rvm: 2.1.2
+      env: "RAILS_VERSION=4.1.0"
+    - rvm: 2.2.0
+      env: "RAILS_VERSION=4.2.0"
 install:
   - 'travis_retry bundle install'
 addons:
